# sprite-splitter

./: README.md  pyproject.toml  requirements.txt  sprite-splitter.spec
.github/workflows/: ci.yml  release.yml
src/sprite_splitter/: __init__.py  __main__.py  main.py
src/sprite_splitter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/sprite_splitter/assets/: README.md
src/sprite_splitter/detection/: background.py  base.py  contour.py  grid.py
src/sprite_splitter/export/: gif_exporter.py  manifest.py  png_exporter.py
src/sprite_splitter/models/: sprite_frame.py  sprite_project.py
src/sprite_splitter/naming/: convention.py
src/sprite_splitter/ui/: animation_preview.py  app_assets.py  canvas_view.py  character_dialog.py  direction_panel.py  export_dialog.py  frame_panel.py  main_window.py  naming_dialog.py  settings_panel.py  start_screen.py  wizard_panel.py
tests/: test_animation_preview.py  test_core.py
